# serializer version: 1
# name: test_calc_eq_matrix_b[1x1]
  tuple(
    array([0, 0, 0, 2, 2, 4, 1, 1, 1, 3, 3, 5, 2, 4, 6, 4, 6, 6, 3, 5, 7, 5,
         7, 7], dtype=int32),
    array([0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3,
         4, 5], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[1x1].1
  2
# ---
# name: test_calc_eq_matrix_b[1x1].2
  tuple(
    8,
    6,
  )
# ---
# name: test_calc_eq_matrix_b[2x2]
  tuple(
    array([ 0,  0,  0,  0,  2,  2,  2,  2,  4,  4,  6,  6,  6,  8,  8,  8,  8,
         10, 10, 10, 12, 14,  1,  1,  1,  1,  3,  3,  3,  3,  5,  5,  7,  7,
          7,  9,  9,  9,  9, 11, 11, 11, 13, 15,  2,  6,  8, 10,  4,  6,  8,
         10,  8, 10,  8, 12, 14, 10, 12, 14, 16, 12, 14, 16, 14, 16,  3,  7,
          9, 11,  5,  7,  9, 11,  9, 11,  9, 13, 15, 11, 13, 15, 17, 13, 15,
         17, 15, 17], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,
          7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,
          2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18,
         19, 20, 21], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[2x2].1
  2
# ---
# name: test_calc_eq_matrix_b[2x2].2
  tuple(
    18,
    22,
  )
# ---
# name: test_calc_eq_matrix_b[3x6]
  tuple(
    array([ 0,  0,  0,  2,  2,  2,  2,  4,  4,  4,  4,  6,  6,  8,  8,  8, 10,
         10, 10, 10, 12, 12, 12, 12, 14, 14, 16, 16, 16, 18, 18, 18, 18, 20,
         20, 20, 20, 22, 22, 24, 24, 24, 26, 26, 26, 26, 28, 28, 28, 28, 30,
         30, 32, 32, 32, 34, 34, 34, 34, 36, 36, 36, 36, 38, 38, 40, 40, 40,
         42, 42, 42, 42, 44, 44, 44, 44, 46, 46, 48, 50, 52,  1,  1,  1,  3,
          3,  3,  3,  5,  5,  5,  5,  7,  7,  9,  9,  9, 11, 11, 11, 11, 13,
         13, 13, 13, 15, 15, 17, 17, 17, 19, 19, 19, 19, 21, 21, 21, 21, 23,
         23, 25, 25, 25, 27, 27, 27, 27, 29, 29, 29, 29, 31, 31, 33, 33, 33,
         35, 35, 35, 35, 37, 37, 37, 37, 39, 39, 41, 41, 41, 43, 43, 43, 43,
         45, 45, 45, 45, 47, 47, 49, 51, 53,  2,  8, 10,  4,  8, 10, 12,  6,
         10, 12, 14, 12, 14, 10, 16, 18, 12, 16, 18, 20, 14, 18, 20, 22, 20,
         22, 18, 24, 26, 20, 24, 26, 28, 22, 26, 28, 30, 28, 30, 26, 32, 34,
         28, 32, 34, 36, 30, 34, 36, 38, 36, 38, 34, 40, 42, 36, 40, 42, 44,
         38, 42, 44, 46, 44, 46, 42, 48, 50, 44, 48, 50, 52, 46, 50, 52, 54,
         52, 54, 50, 52, 54,  3,  9, 11,  5,  9, 11, 13,  7, 11, 13, 15, 13,
         15, 11, 17, 19, 13, 17, 19, 21, 15, 19, 21, 23, 21, 23, 19, 25, 27,
         21, 25, 27, 29, 23, 27, 29, 31, 29, 31, 27, 33, 35, 29, 33, 35, 37,
         31, 35, 37, 39, 37, 39, 35, 41, 43, 37, 41, 43, 45, 39, 43, 45, 47,
         45, 47, 43, 49, 51, 45, 49, 51, 53, 47, 51, 53, 55, 53, 55, 51, 53,
         55], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,
         34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,
         51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,
         68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,
          4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
         21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37,
         38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54,
         55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,
         72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,
          8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24,
         25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41,
         42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58,
         59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75,
         76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,
         29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45,
         46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62,
         63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
         80], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[3x6].1
  2
# ---
# name: test_calc_eq_matrix_b[3x6].2
  tuple(
    56,
    81,
  )
# ---
# name: test_save_results_to_csv_appends[append_to_csv_file]
  list([
    dict({
      'cpu_time_setup': '0.234',
      'cpu_time_solve': '12.456',
      'final_volume': '123.456',
      'height': '8',
      'iterations': '12',
      'load_large': '50',
      'load_small': '5',
      'n_ground_structure': '1234',
      'n_load_points': '2',
      'n_members_final': '87',
      'n_nodes': '81',
      'n_patterns_active': '3',
      'n_patterns_total': '4',
      'notes': 'Test run',
      'primal_method': 'True',
      'problem_name': 'test_problem',
      'timestamp': '2026-03-04 15:30:00',
      'width': '8',
    }),
    dict({
      'cpu_time_setup': '0.234',
      'cpu_time_solve': '12.456',
      'final_volume': '123.456',
      'height': '8',
      'iterations': '12',
      'load_large': '50',
      'load_small': '5',
      'n_ground_structure': '1234',
      'n_load_points': '2',
      'n_members_final': '87',
      'n_nodes': '81',
      'n_patterns_active': '3',
      'n_patterns_total': '4',
      'notes': 'Test run',
      'primal_method': 'True',
      'problem_name': 'test_problem',
      'timestamp': '2026-03-04 15:30:00',
      'width': '8',
    }),
  ])
# ---
# name: test_save_results_to_csv_new[new_csv_file]
  list([
    'timestamp',
    'problem_name',
    'width',
    'height',
    'n_load_points',
    'n_patterns_total',
    'n_patterns_active',
    'load_large',
    'load_small',
    'iterations',
    'final_volume',
    'n_members_final',
    'n_nodes',
    'n_ground_structure',
    'cpu_time_setup',
    'cpu_time_solve',
    'primal_method',
    'notes',
  ])
# ---
# name: test_save_results_to_csv_new[new_csv_file].1
  list([
    dict({
      'cpu_time_setup': '0.234',
      'cpu_time_solve': '12.456',
      'final_volume': '123.456',
      'height': '8',
      'iterations': '12',
      'load_large': '50',
      'load_small': '5',
      'n_ground_structure': '1234',
      'n_load_points': '2',
      'n_members_final': '87',
      'n_nodes': '81',
      'n_patterns_active': '3',
      'n_patterns_total': '4',
      'notes': 'Test run',
      'primal_method': 'True',
      'problem_name': 'test_problem',
      'timestamp': '2026-03-04 15:30:00',
      'width': '8',
    }),
  ])
# ---
# name: test_testname[1x1]
  tuple(
    np.float64(150.0),
    array([ 0.        ,  0.        , 70.71067812,  0.        ,  0.        ,
         50.        ]),
  )
# ---
# name: test_testname[1x1].1
  '''
         problem_name  width  height  n_load_points  n_patterns_total  n_patterns_active  load_large  load_small  iterations  final_volume  n_members_final  n_nodes  n_ground_structure primal_method                  notes
  0  short cantilever      1       1              1                 2                  1          50           5           2         150.0                6        4                   6   load_factor  short cantliever test
  '''
# ---
# name: test_testname[2x2]
  tuple(
    np.float64(150.0),
    array([ 0.        ,  0.        , 70.71067812,  0.        ,  0.        ,
         50.        ]),
  )
# ---
# name: test_testname[2x2].1
  '''
         problem_name  width  height  n_load_points  n_patterns_total  n_patterns_active  load_large  load_small  iterations  final_volume  n_members_final  n_nodes  n_ground_structure primal_method                  notes
  0  short cantilever      1       1              1                 2                  1          50           5           2         150.0                6        4                   6   load_factor  short cantliever test
  '''
# ---
# name: test_testname[parallel forces]
  tuple(
    np.float64(1500.0),
    array([250.        ,   0.        ,  70.71067812, 150.        ,
          70.71067812,   0.        ,  70.71067812,  50.        ,
          70.71067812,   0.        ,  70.71067812,  70.71067812,
           0.        , 250.        , 150.        ,  50.        ]),
    None,
  )
# ---
# name: test_trussopt[1x1]
  tuple(
    np.float64(150.0),
    array([ 0.      ,  0.      , 70.710678,  0.      ,  0.      , 50.      ]),
    None,
  )
# ---
# name: test_trussopt[1x1].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever         None     1      1             1                2                 1         50          5          2        150.0               6       4                  6   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[2x2]
  tuple(
    np.float64(150.0),
    array([ 0.      ,  0.      , 70.710678,  0.      ,  0.      , 50.      ]),
    None,
  )
# ---
# name: test_trussopt[2x2].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever         None     1      1             1                2                 1         50          5          2        150.0               6       4                  6   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[parallel forces]
  tuple(
    np.float64(1500.0),
    array([250.      ,   0.      ,  70.710678, 150.      ,  70.710678,
           0.      ,  70.710678,  50.      ,  70.710678,   0.      ,
          70.710678,  70.710678,   0.      , 250.      , 150.      ,
          50.      ]),
    None,
  )
# ---
# name: test_trussopt[parallel forces].1
  '''
        problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                 notes
  0  parallel forces         None     3      1             2                4                 1         50          5          2       1500.0              16       8                 20   load_factor  parallel forces test
  '''
# ---
# name: test_trussopt[short cantilever]
  tuple(
    np.float64(300.0),
    array([ 0.      ,  0.      , 35.355339,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      , 35.355339,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
         35.355339,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      , 35.355339,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
         35.355339,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      , 35.355339,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ]),
    None,
  )
# ---
# name: test_trussopt[short cantilever].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever         None     3      6             1                2                 1         50          5          2        300.0              81      28                251   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[spanning example]
  tuple(
    np.float64(319.170902),
    array([0.      , 0.      , 0.      , 5.581546, 0.      , 0.      ,
         0.      , 0.      , 3.672398, 0.      , 0.932571, 0.      ,
         3.270932, 1.884622, 0.812564, 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 5.662358, 0.      , 0.      , 0.932571, 0.      ,
         3.802703, 0.      , 0.      , 0.812564, 1.884622, 3.060199,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         5.581546, 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         5.662358, 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 3.672398, 0.      ,
         0.      , 0.      , 0.      , 0.      , 5.581546, 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.164975, 0.      , 0.143921,
         0.      , 0.      , 0.      , 0.223652, 0.626697, 0.115483,
         0.      , 0.163317, 0.115483, 0.      , 0.      , 0.      ,
         0.115483, 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.115483, 0.163317, 0.      , 0.      ,
         0.      , 0.137318, 0.      , 0.164975, 0.      , 0.630672,
         0.226314, 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 5.662358, 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 3.802703,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 1.586635, 0.      , 1.773912, 0.      ,
         0.      , 0.      , 0.      , 0.      , 5.581546, 0.      ,
         0.      , 0.163317, 0.      , 0.      , 0.      , 1.825943,
         0.421172, 0.470885, 0.      , 0.421172, 0.      , 0.850631,
         0.421172, 0.097098, 0.      , 0.043424, 0.      , 0.045512,
         0.      , 0.101767, 0.      , 0.      , 0.      , 0.850631,
         0.      , 0.421172, 0.      , 0.470885, 0.      , 1.825943,
         0.      , 0.      , 0.      , 0.163317, 0.      , 0.      ,
         5.662358, 0.      , 0.      , 0.      , 0.      , 0.      ,
         1.659626, 0.      , 1.484415, 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      , 2.963204, 2.963204, 6.926293, 6.926293,
         2.998607, 2.998607, 0.      , 0.      , 0.      , 0.      ,
         0.      , 0.      ]),
    None,
  )
# ---
# name: test_trussopt[spanning example].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example         None    18      4             4               16                10       3.75      0.204         15   319.170902             632      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[square cantilever]
  tuple(
    np.float64(2070.37037),
    array([16.666667,  0.      , 13.591487,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  4.906567, 62.328296,  0.      , 13.725851,
          0.      ,  0.      , 16.666667,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      , 16.666667,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      , 16.666667,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      , 16.666667,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      , 16.666667,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      , 16.666667,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      , 16.666667,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
         52.704628,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      , 13.591487,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      , 13.591487,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  4.906567,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      , 62.112999,
          0.      ,  5.176083,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      , 13.591487,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  3.329008,  0.      ,
         13.316031,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      , 66.782307,  0.      , 35.355339,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  9.221564,  0.      ,
          9.008388,  3.10565 ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      , 36.033551,  0.      , 11.785113, 32.339015,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      , 35.355339,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  9.221564,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      , 37.142534,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      , 37.2678  ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  9.221564,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      , 32.339015,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      , 37.396978,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  9.221564,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ,  0.      ,  0.      ,
          0.      ,  0.      ,  0.      ,  0.      ]),
    None,
  )
# ---
# name: test_trussopt[square cantilever].1
  '''
          problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                   notes
  0  square cantilever         None     8      8             2                4                 1         50          5          8   2070.37037             376      81               2040   load_factor  square cantliever test
  '''
# ---
